--- a/kadai_015/kadai_015.html
+++ b/kadai_015/kadai_015.html
@@ -13,11 +13,11 @@
   <h1><span class="blue">M</span>Y<span class="pink">P</span>ROFILE</h1>
   <div id="basic">
     <h2 class="pink">名前</h2>
-    <p id="second">侍　太郎</p>
+    <p class="text-bold">侍　太郎</p>
     <h2 class="blue">生年月日</h2>
-    <p id="second">1990年1月1日</p>
+    <p class="text-bold">1990年1月1日</p>
     <h2 class="pink">血液型</h2>
-    <p id="second">O型</p>
+    <p class="text-bold">O型</p>
   </div>
   <h2 class="blue">趣味</h2>
   <p>旅行、読書、ゲーム</p>
